@@ -1,5 +1,10 @@
 2015-01-13  Chung-Ju Wu  <jasonwucj@gmail.com>
 
+	* config/nds32/nds32.c (nds32_legitimate_address_p): Consider
+	TARGET_CMODEL_LARGE and TARGET_CMODEL_MEDIUM cases.
+
+2015-01-13  Chung-Ju Wu  <jasonwucj@gmail.com>
+
 	* config/nds32/nds32.h (NDS32_SYMBOL_FLAG_RODATA): Define our own
 	target-specific symbol_ref flag.
 	(NDS32_SYMBOL_REF_RODATA_P): Define it to check if the symbol_ref
